[gd_scene load_steps=18 format=2]

[ext_resource path="res://PrepStation.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/Interiors_32x32.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/icons/dough.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/animated_kitchen_kneader_32x32.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/WorkspaceOne.gd" type="Script" id=5]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/WorkspaceTwo.gd" type="Script" id=6]
[ext_resource path="res://Assets/Art/SpriteSheets/objects/KitchenMixer.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 19 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ParticlesMaterial" id=7]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 43.48
initial_velocity_random = 0.23
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color = Color( 1, 0.980392, 0.913725, 1 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 16 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 16 )

[node name="PrepStation" type="Node2D" groups=[
"fridges",
]]
script = ExtResource( 1 )

[node name="KitchenMixer" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 24
script = ExtResource( 7 )

[node name="KitchenMixerCollision" type="CollisionShape2D" parent="KitchenMixer"]
position = Vector2( 56, 3 )
shape = SubResource( 1 )

[node name="KitchenMixerAnimated" type="AnimatedSprite" parent="KitchenMixer"]
position = Vector2( 40, -8 )
frames = SubResource( 6 )
frame = 1
flip_h = true

[node name="Particles2D" type="Particles2D" parent="KitchenMixer/KitchenMixerAnimated"]
position = Vector2( 24, 11 )
amount = 22
lifetime = 0.5
explosiveness = 0.17
randomness = 1.0
process_material = SubResource( 7 )

[node name="KitchenMixerTimer" type="Timer" parent="KitchenMixer"]
wait_time = 3.0

[node name="Table" type="RigidBody2D" parent="."]
collision_layer = 4
collision_mask = 24
mode = 1

[node name="TableSprite" type="Sprite" parent="Table"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 450, 14286, 60, 38 )
region_filter_clip = true

[node name="TableCollisionShape" type="CollisionShape2D" parent="Table"]
position = Vector2( 0, -8 )
shape = SubResource( 8 )

[node name="WorkspaceTwo" type="Area2D" parent="." groups=[
"fridge",
]]
collision_layer = 4
collision_mask = 24
script = ExtResource( 6 )

[node name="WorkspaceSprite2" type="Sprite" parent="WorkspaceTwo"]
position = Vector2( 16, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 8, 9, 24, 22 )
region_filter_clip = true

[node name="Space2CollisionShape" type="CollisionShape2D" parent="WorkspaceTwo"]
position = Vector2( 16, 0 )
shape = SubResource( 9 )

[node name="WorkspaceOne" type="Area2D" parent="." groups=[
"fridge",
]]
collision_layer = 4
collision_mask = 24
script = ExtResource( 5 )

[node name="WorkspaceSprite1" type="Sprite" parent="WorkspaceOne"]
position = Vector2( -16, -8 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 8, 9, 24, 22 )
region_filter_clip = true

[node name="Space1CollisionShape" type="CollisionShape2D" parent="WorkspaceOne"]
position = Vector2( -16, 0 )
shape = SubResource( 10 )
[connection signal="body_entered" from="KitchenMixer" to="." method="_on_KitchenMixer_body_entered"]
[connection signal="body_entered" from="KitchenMixer" to="KitchenMixer" method="_on_KitchenMixer_body_entered"]
[connection signal="body_exited" from="KitchenMixer" to="KitchenMixer" method="_on_KitchenMixer_body_exited"]
[connection signal="timeout" from="KitchenMixer/KitchenMixerTimer" to="KitchenMixer" method="_on_KitchenMixerTimer_timeout"]
[connection signal="body_entered" from="WorkspaceTwo" to="." method="_on_WorkspaceTwo_body_entered"]
[connection signal="body_entered" from="WorkspaceOne" to="WorkspaceOne" method="_on_WorkspaceOne_body_entered"]
